WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301238
[EME/MSE] AudioVideoRendererRemote doesn't support CDMInstance/LegacyCDMSession
https://bugs.webkit.org/show_bug.cgi?id=301238
Summary
[EME/MSE] AudioVideoRendererRemote doesn't support CDMInstance/LegacyCDMSession
Jean-Yves Avenard [:jya]
Reported
2025-10-21 17:48:08 PDT
When the MediaSourcePrivateAVFObjC runs in the web process, protected content can't be played as the AudioVideoRendererRemote doesn't support setCDMInstance/setCDMSession
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-21 17:48:14 PDT
<
rdar://problem/163154712
>
Jean-Yves Avenard [:jya]
Comment 2
2025-10-21 18:03:23 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52782
EWS
Comment 3
2025-10-21 20:59:18 PDT
Committed
301926@main
(e3a42447693c): <
https://commits.webkit.org/301926@main
> Reviewed commits have been landed. Closing PR #52782 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug