[EME/MSE] AudioVideoRendererRemote doesn't support CDMInstance/LegacyCDMSession https://bugs.webkit.org/show_bug.cgi?id=301238 rdar://163154712

Reviewed by Eric Carlson.

Add IPC supports for setCDMInstance/setCDMSession to AudioVideoRendererRemote.

Will be covered by existing FairPlay tests once MediaSourceUseRemoteAudioVideoRenderer
is enabled.
* Source/WebCore/platform/graphics/AudioVideoRenderer.h:
* Source/WebKit/GPUProcess/media/RemoteAudioVideoRendererProxyManager.cpp:
(WebKit::RemoteAudioVideoRendererProxyManager::requestHostingContext): Add extra logging.
(WebKit::RemoteAudioVideoRendererProxyManager::setLegacyCDMSession): Added
(WebKit::RemoteAudioVideoRendererProxyManager::setCDMInstance): Added
(WebKit::RemoteAudioVideoRendererProxyManager::setInitData): Added
(WebKit::RemoteAudioVideoRendererProxyManager::attemptToDecrypt): Added
* Source/WebKit/GPUProcess/media/RemoteAudioVideoRendererProxyManager.h:
* Source/WebKit/GPUProcess/media/RemoteAudioVideoRendererProxyManager.messages.in:
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
* Source/WebKit/WebProcess/GPU/media/AudioVideoRendererRemote.cpp:
(WebKit::AudioVideoRendererRemote::setCDMInstance): Added
(WebKit::AudioVideoRendererRemote::setInitData): Added
(WebKit::AudioVideoRendererRemote::attemptToDecrypt): Added
(WebKit::AudioVideoRendererRemote::setCDMSession): Added
(WebKit::AudioVideoRendererRemote::setVideoLayerSizeFenced): Added
* Source/WebKit/WebProcess/GPU/media/AudioVideoRendererRemote.h:

Canonical link: https://commits.webkit.org/301926@main